--- a/src/app/components/test-bar/test-bar.component.scss
+++ b/src/app/components/test-bar/test-bar.component.scss
@@ -16,6 +16,7 @@ a {
     height: 100%;
     background-color: black;
     transition: all .5s ease;
+    // overflow-y: scroll;
     // z-index: 5000;
 
     header {
@@ -106,6 +107,7 @@ label #cancel{
         background-color: rgba($color: #000000, $alpha: 0.9);;
         transition: all .5s ease;
         z-index: 19;
+        // overflow-y: scroll;
 
         header {
             text-align: center;
