--- a/src/app/components/post-drink/post-drink.component.html
+++ b/src/app/components/post-drink/post-drink.component.html
@@ -101,6 +101,7 @@
                         id="inline-full-name"
                         rows="10" cols="30"
                         placeholder="Introduzca el paso a paso de la receta..."
+                        style= "white-space: pre-line; white-space: pre-wrap;"
                         >
                         </textarea>
                     </div>
@@ -163,39 +164,28 @@
                     class="width-full"
                 >
                     <div class="lg:flex lg:items-center mb-6">
-                    <div class="md:w-full lg:w-1/5">
+                        <div class="w-full lg:w-1/5">
                         <label
-                        class="block text-black-500 font-bold lg:text-right md:text-left mb-1 md:mb-0 pr-4"
-                        for="inline-full-name"
+                            class="block text-black-500 font-bold lg:text-right mb-1 md:mb-6 pr-4"
+                            for="inline-full-name"
                         >
-                        Ingrediente
+                            Ingrediente
                         </label>
-                    </div>
-                    <div class="md:w-full lg:w-2/5">
-                        <input
-                        formControlName="ingredient"
-                        class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-                        id="inline-full-name"
-                        type="text"
-                        placeholder="Ej. Ron blanco."
-                        />
-                    </div>
-                    <div class="flex space-x-4 justify-end md:w-full lg:w-2/5">
-                        <button
-                        (click)="addIngredient()"
-                        class="w-1/3 sm:w-1/4 md:w-1/4 lg:w-1/3 shadow bg-gray-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-                        type="button"
-                        >
-                        +
-                        </button>
-                        <button
-                        *ngIf="i!=0"
-                        (click)="deleteIngredient(i)"
-                        class="w-1/3 sm:w-1/4 md:w-1/4 lg:w-1/3 shadow bg-gray-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-                        type="button"
-                        >
-                        -
-                        </button>
+                        </div>
+                        <div class="w-full flex mb-6">
+                        <div class="w-4/5">
+                            <input formControlName="ingredient" class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500" type="text" placeholder="Ej. Ron blanco.">
+                        </div>
+                        <div class="pt-0 flex space-x-4 justify-end  w-1/5">
+                            <button
+                            *ngIf="i != 0"
+                            (click)="deleteIngredient(i)"
+                            class="w-3/4  shadow bg-gray-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                            type="button"
+                            >
+                            -
+                            </button>
+                        </div>
                     </div>
                     </div>
                     <app-required-field
@@ -203,12 +193,26 @@
                     [text]="'Este campo es requerido.'"
                     ></app-required-field>
                 </div>
+                <div class="lg:flex lg:items-center mb-6">
+                    <div class="w-full lg:w-1/5"></div>
+                    <div class="w-full flex mb-6"> 
+                        <div class="w-4/5"> </div>
+                        <div class="pt-0 flex space-x-4 justify-end  w-1/5">
+                            <button
+                            (click)="addIngredient()"
+                            class="w-3/4  shadow bg-gray-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                            type="button"
+                            >
+                            +
+                            </button>
+                        </div>
+                    </div>
+                </div>
                 </div>
 
 
                 <div class="md:flex md:items-center mb-6">
-                <!-- <div class="md:w-1/3"></div> -->
-                <div class="flex space-x-4 justify-end md:w-full">
+                <div class="flex space-x-4 justify-center md:w-full">
                     <button
                     [disabled]="form.invalid"
                     (click)="postRecipe()"
