--- a/src/app/components/post-business/post-business.component.html
+++ b/src/app/components/post-business/post-business.component.html
@@ -1,1 +1,198 @@
-<p>post-business works!</p>
+<app-test-bar (message)="getMessage($event)"></app-test-bar>
+<div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
+    <app-header></app-header>
+    <div *ngIf="loading">
+        <app-loader></app-loader>
+    </div>
+
+    <div *ngIf="!loading" style="font-family: 'Open Sans', sans-serif;"> 
+        <div *ngIf="!sending && !sent" class="w-full min-h-full content-center">  
+            <div
+            class="h-20 w-full flex justify-center items-center pt-12 pb-12"
+            style="font-family: 'Open Sans', sans-serif;"
+            >
+                <div><h2 class="text-4xl">¡SÉ PARTE DE DRINKLY!</h2></div>
+            </div>
+            <div class="w-full flex justify-center items-center h-full">
+            <form
+                [formGroup]="form"
+                class="w-2/3 md:w-2/4 content-center"
+                encType="multipart/form-data"
+            >
+                <div class="width-full">
+                    <div class="lg:flex lg:items-center mb-6">
+                        <div class="md:w-full lg:w-1/5">
+                            <label
+                                class="block text-black-500 font-bold md:text-left lg:text-right mb-1 md:mb-0 pr-4"
+                                for="inline-full-name"
+                            >
+                                Nombre de la empresa
+                            </label>
+                        </div>
+                        <div class="md:w-full lg:w-4/5">
+                            <input
+                                formControlName="name"
+                                class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
+                                type="text"
+                                placeholder="Ej. Empresas Polar"
+                            />
+                        </div>
+                    </div>
+                <app-required-field
+                    [text]="'Este campo es requerido.'"
+                    *ngIf="form.get('name').invalid && form.get('name').touched"
+                ></app-required-field>
+                </div>
+
+                <div class="width-full">
+                    <div class="lg:flex lg:items-center mb-6">
+                        <div class="md:w-full lg:w-1/5">
+                            <label
+                                class="block text-black-500 font-bold md:text-left lg:text-right mb-1 md:mb-0 pr-4"
+                                for="inline-full-name"
+                            >
+                                Teléfono
+                            </label>
+                        </div>
+                        <div class="md:w-full lg:w-4/5">
+                            <input
+                                formControlName="phone"
+                                class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
+                                type="text"
+                                placeholder="Ej. 02123451212"
+                            />
+                        </div>
+                    </div>
+                <app-required-field
+                    [text]="'Este campo es requerido.'"
+                    *ngIf="form.get('phone').invalid && form.get('phone').touched"
+                ></app-required-field>
+                </div>
+
+                <div class="width-full">
+                <div class="lg:flex lg:items-center mb-6">
+                    <div class="md:w-full lg:w-1/5">
+                    <label
+                        class="block text-black-500 font-bold md:text-left lg:text-right mb-1 md:mb-0 pr-4"
+                        for="inline-full-name"
+                    >
+                        Email
+                    </label>
+                    </div>
+                    <div class="md:w-full lg:w-4/5">
+                    <input
+                        formControlName="email"
+                        class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
+                        type="email"
+                        placeholder="Ej. empresa@gmail.com"
+                    />
+                    </div>
+                </div>
+                <app-required-field
+                    [text]="'Este campo es requerido y debe ser un correo.'"
+                    *ngIf="
+                    form.get('email').invalid &&
+                    form.get('email').touched
+                    "
+                ></app-required-field>
+                </div>
+
+
+                <div class="width-full">
+                <div class="lg:flex lg:items-center mb-6">
+                    <div class="md:w-full lg:w-1/5">
+                    <label
+                        class="block text-black-500 font-bold md:text-left lg:text-right mb-1 md:mb-0 pr-4"
+                        for="inline-full-name"
+                    >
+                        ¿Cómo te podemos ayudar?
+                    </label>
+                    </div>
+                    <div class="md:w-full lg:w-4/5">
+                        <textarea 
+                        name="info" 
+                        formControlName="info"
+                        class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
+                        rows="10" cols="30"
+                        placeholder="Quiero que mi negocio aparezca entre sus bares más destacados..."
+                        style= "white-space: pre-line; white-space: pre-wrap;"
+                        >
+                        </textarea>
+                    </div>
+                </div>
+                <app-required-field
+                    [text]="'Este campo es requerido.'"
+                    *ngIf="
+                    form.get('info').invalid && form.get('info').touched
+                    "
+                ></app-required-field>
+                </div>
+
+                <div class="md:flex md:items-center mb-6">
+                <div class="flex space-x-4 justify-center md:w-full">
+                    <button
+                    [disabled]="form.invalid"
+                    (click)="post()"
+                    class="w-1/3 sm:w-1/4 md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                    type="button"
+                    >
+                    Enviar
+                    </button>
+                    <button
+                    (click)="goBack()"
+                    class="w-1/3 sm:w-1/4 md:w-1/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                    type="button"
+                    >
+                    Regresar
+                    </button>
+                </div>
+                </div>
+            </form>
+            </div>
+        </div>
+        
+        <div *ngIf="sending && !sent" >
+            <app-uploading-loader [text]="'Enviando...'"></app-uploading-loader>
+        </div>
+
+        <div  *ngIf="!sending && sent" class="w-full min-h-full flex items-center" style="min-height:65vh; align-content: center">
+            <div class="w-full">
+                <div class="w-full flex justify-center items-center h-full">
+                    <div class="w-1/4 content-center">
+                        <div class="h-48" style="
+                            background-image: url(assets/images/sent-2.gif);
+                            background-size: cover;
+                            background-position: center;
+                        ">
+                        
+                        </div>
+                    </div>
+                </div>
+                <div
+                class="h-20 w-full flex justify-center items-center pt-12 pb-12"
+                style="font-family: 'Open Sans', sans-serif;"
+                >
+                    <div><p class="text-xl md:text-4xl">¡Tu mensaje ha sido enviado!</p></div>
+                </div>
+
+                <div
+                class="h-20 w-full flex justify-center items-center pt-12 pb-12"
+                style="font-family: 'Open Sans', sans-serif;"
+                >
+                    <div class="w-1/2 flex space-x-4 justify-center">
+                        <button
+                        (click)="goHome()"
+                        class="w-1/3 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                        >
+                            OK
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+      
+
+    </div>
+    <app-footer></app-footer>
+
+</div>
