--- a/src/app/components/post-drink/post-drink.component.html
+++ b/src/app/components/post-drink/post-drink.component.html
@@ -261,7 +261,7 @@
                 <div class="w-full flex justify-center items-center h-full">
                     <div class="w-1/4 content-center">
                         <div class="h-48" style="
-                            background-image: url(assets/images/sent.gif);
+                            background-image: url(assets/images/sent-2.gif);
                             background-size: cover;
                             background-position: center;
                         ">
@@ -273,7 +273,7 @@
                 class="h-20 w-full flex justify-center items-center pt-12 pb-12"
                 style="font-family: 'Open Sans', sans-serif;"
                 >
-                    <div><p class="text-4xl">¡Tu receta ha sido publicada!</p></div>
+                    <div><p class="text-xl md:text-4xl">¡Tu receta ha sido publicada!</p></div>
                 </div>
 
                 <div
