juegos bonitos y home borrador

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 
 
 <div class="flex bg-black top-0">
-  <a href="/bars"
+  <a href="/home"
     ><img
       src="assets/images/Drinkly-2.png"
       alt="logo_drinkly"
