--- a/src/app/components/bars/bars-list/bars-list.component.html
+++ b/src/app/components/bars/bars-list/bars-list.component.html
@@ -52,7 +52,9 @@
     </div>
   
 
-
+<button class="back_btn" (click)="goBack()">
+  <img class="p-3" src="assets/images/goback.png" alt="" >
+</button>
 <app-footer></app-footer>
 </div>
 
