--- a/src/app/components/bars/detail-bar/detail-bar.component.html
+++ b/src/app/components/bars/detail-bar/detail-bar.component.html
@@ -111,6 +111,9 @@ style="margin-left: 0;"
     </div>
   </div>
 </div>  
+<button class="back_btn" (click)="goBack()">
+      <img class="p-3" src="assets/images/goback.png" alt="" >
+    </button>
 <app-footer></app-footer>
 </div>
 
