--- a/src/app/components/drinks/filter-parent/filter-parent.component.html
+++ b/src/app/components/drinks/filter-parent/filter-parent.component.html
@@ -165,7 +165,9 @@
             </div>
             </div>
 
-
+            <button class="back_btn" (click)="goBack()">
+              <img class="p-3" src="assets/images/goback.png" alt="" >
+            </button>
             <app-footer></app-footer>
           </div>
 
