--- a/src/app/components/recipe/recipe.component.html
+++ b/src/app/components/recipe/recipe.component.html
@@ -36,5 +36,8 @@
     <div>
 
     </div>
+    <button class="back_btn" (click)="goBack()">
+      <img class="p-3" src="assets/images/goback.png" alt="" >
+    </button>
     <app-footer></app-footer>
 </div>
