--- a/src/app/components/admin/drink/add-drink/add-drink.component.html
+++ b/src/app/components/admin/drink/add-drink/add-drink.component.html
@@ -41,7 +41,6 @@
                 <input
                   formControlName="name"
                   class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-                  id="inline-full-name"
                   type="text"
                   placeholder="Ej. Margarita"
                 />
@@ -69,7 +68,6 @@
               <input
                 formControlName="description"
                 class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-                id="inline-full-name"
                 type="text"
                 placeholder=""
               />
@@ -92,13 +90,24 @@
               </label>
             </div>
             <div class="md:w-full lg:w-4/5">
+              <textarea 
+                name="recipe" 
+                formControlName="recipe"
+                class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
+                rows="10" cols="30"
+                placeholder="Introduzca el paso a paso de la receta..."
+                style= "white-space: pre-line; white-space: pre-wrap;"
+                >
+              </textarea>
+            <!--
               <input
                 formControlName="recipe"
                 class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-                id="inline-full-name"
+                
                 type="text"
                 placeholder=""
               />
+            -->
             </div>
             </div>
             <app-required-field
@@ -121,7 +130,7 @@
               <input
                 formControlName="owner_name"
                 class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-                id="inline-full-name"
+                
                 type="text"
                 placeholder="Ej. USERNAME"
               />
@@ -296,7 +305,7 @@
                               formControlName="ingredients"
                               list="ing_list"
                               class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-                              id="inline-full-name"
+                              
                               type="text"
                               placeholder="Ej. Fresa" 
                               [matAutocomplete]="auto"
@@ -395,7 +404,7 @@
               <input
                 formControlName="name_ing"
                 class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
-                id="inline-full-name"
+                
                 type="text"
                 placeholder="Ej. Ron"
               />
