--- a/src/app/components/admin/drink/edit-drink/edit-drink.component.html
+++ b/src/app/components/admin/drink/edit-drink/edit-drink.component.html
@@ -88,6 +88,16 @@
             </label>
           </div>
           <div class="md:w-full lg:w-4/5">
+          <textarea 
+              name="recipe" 
+              formControlName="recipe"
+              class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
+              rows="10" cols="30"
+              placeholder="Introduzca el paso a paso de la receta..."
+              style= "white-space: pre-line; white-space: pre-wrap;"
+              >
+            </textarea>
+          <!--
             <input
               formControlName="recipe"
               class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
@@ -95,6 +105,7 @@
               type="text"
               placeholder=""
             />
+          -->
           </div>
           </div>
           <app-required-field
