componente para que sepan de nosotros

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,7 +5,7 @@
     </div>
   
     <div style="bottom: 1rem;" class="text-xs sm:text-lg md:text-lg flex-1">
-      <p>drinkly@gmail.com</p>
+      <p>drinkly.official@gmail.com</p>
       <p>Blah blah</p>
       <p>Caracas, Venezuela</p>
     </div>
@@ -19,17 +19,17 @@
   >
     <div class="flex flex-row space-x-10 mb-6 mt-6 sm:mt-10 sm:mb-10 h-8 sm:h-12">
       <img
-        src="assets/images/instagram 1.png"
+        src="assets/images/twitter2.png"
         alt="insta"
         class="h-full cursor-pointer"
       />
       <img
-        src="assets/images/instagram 1.png"
+        src="assets/images/facebook2.png"
         alt="insta"
         class="h-full cursor-pointer"
       />
       <img
-        src="assets/images/instagram 1.png"
+        src="assets/images/insta2.png"
         alt="insta"
         class="h-full cursor-pointer"
       />
