cambio en receta para que agarre el enter

--- a/src/app/components/recipe/recipe.component.html
+++ b/src/app/components/recipe/recipe.component.html
@@ -26,7 +26,7 @@
         <div class="px-8 sm:px-16 md:px-48">
             <div class="font-light py-4">{{receta.description}}</div>
             <div class="text-normal sm:text-3xl md:text-3xl pt-4">Receta</div>
-            <div class="font-light py-4">{{receta.recipe}}</div>
+            <div class="font-light py-4" style="white-space: pre-line; white-space: pre-wrap;">{{receta.recipe}}</div>
         </div>
         <div class="flex justify-end pt-16 px-8 md:px-32 py-4 font-light">
             Fuente: {{receta.owner.name}}
