--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,7 +24,7 @@ html {
   bottom: 5rem;
   right: 1rem;
   border-radius: 100%;
-  background-color: orange;
+  background-color: rgb(237,137,54);
   height: 3.5rem;
   width: 3.5rem;
   box-shadow: 1px 1px 7px #868585;
