--- a/src/app/components/drinkly-team/drinkly-team.component.html
+++ b/src/app/components/drinkly-team/drinkly-team.component.html
@@ -29,6 +29,10 @@
 
     </div>
 
+    <button class="back_btn" (click)="goBack()">
+      <img class="p-3" src="assets/images/goback.png" alt="" >
+    </button>
+
     <app-footer></app-footer>
 
 </div>
