--- a/src/app/components/post-drink/post-drink.component.html
+++ b/src/app/components/post-drink/post-drink.component.html
@@ -216,17 +216,10 @@
                     <button
                     [disabled]="form.invalid"
                     (click)="postRecipe()"
-                    class="w-1/3 sm:w-1/4 md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                    class="w-1/3 sm:w-1/2 md:w-1/2 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
                     type="button"
                     >
                     Publicar
-                    </button>
-                    <button
-                    (click)="goBack()"
-                    class="w-1/3 sm:w-1/4 md:w-1/4 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-                    type="button"
-                    >
-                    Regresar
                     </button>
                 </div>
                 </div>
@@ -282,16 +275,10 @@
                 >
                     <div class="w-1/4 flex space-x-4 justify-center">
                         <button
-                        (click)="keepPosting()"
-                        class="md:w-1/3 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-                        >
-                            Publicar
-                        </button>
-                        <button
                         (click)="goHome()"
-                        class="md:w-1/3 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                        class="w-1/3 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
                         >
-                            Regresar
+                            OK
                         </button>
                     </div>
                 </div>
@@ -300,6 +287,9 @@
       
 
     </div>
+    <button class="back_btn" (click)="goBack()">
+      <img class="p-3" src="assets/images/goback.png" alt="" >
+    </button>
     <app-footer></app-footer>
 
 </div>
