--- a/src/app/components/test-bar/test-bar.component.html
+++ b/src/app/components/test-bar/test-bar.component.html
@@ -19,7 +19,7 @@
             <li><a href="/bars" ><img src="assets/images/bar.png" class="h-16">Bares</a></li>
             <li><a href="/games"><img src="assets/images/game.png" class="h-16">Juegos</a></li>
             <li><a href="/post-drink"><img src="assets/images/post.png" class="h-16">Publica</a></li>
-            <li><a href="/drinkly-team"><img src="assets/images/gettoknowus.png" class="h-16">Concócenos</a></li>
+            <li><a href="/drinkly-team"><img src="assets/images/gettoknowus.png" class="h-16">Conócenos</a></li>
             <li *ngIf="isAdmin"><a href="/admin"><img src="assets/images/settings.png" class="h-16">Administrar</a></li>
             <li *ngIf="isLogged"><a href="/profile"><img src="assets/images/user.png" class="h-16">Tu Perfil</a></li>
             <li *ngIf="!isLogged"><a href="/login"><img src="assets/images/login_.png" class="h-16">Entrar</a></li>
@@ -49,7 +49,7 @@
             <li><a href="/bars" ><img src="assets/images/bar.png" class="h-16">Bares</a></li>
             <li><a href="/games"><img src="assets/images/game.png" class="h-16">Juegos</a></li>
             <li><a href="/post-drink"><img src="assets/images/post.png" class="h-16">Publica</a></li>
-            <li><a href="/drinkly-team"><img src="assets/images/gettoknowus.png" class="h-16">Concócenos</a></li>
+            <li><a href="/drinkly-team"><img src="assets/images/gettoknowus.png" class="h-16">Conócenos</a></li>
             <li *ngIf="isAdmin"><a href="/admin"><img src="assets/images/settings.png" class="h-16">Administrar</a></li>
             <li *ngIf="isLogged"><a href="/profile"><img src="assets/images/user.png" class="h-16">Tu Perfil</a></li>
             <li *ngIf="!isLogged"><a href="/login"><img src="assets/images/login_.png" class="h-16">Entrar</a></li>
