--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -19,7 +19,7 @@
                   Ups! Parece que esta ruta no existe...
                 </h1>
                 <button
-                  [routerLink]="'/drinks'"
+                  [routerLink]="'/home'"
                   class="ml-20 mt-5 font-serif subpixel-antialiased text-xl bg-orange-500 hover:bg-orange-600 text-black px-2 rounded-md"
                 >
                   Volver al inicio
