--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 
 
 <div class="flex bg-black fixed top-0 w-full z-10">
-  <a href="/home"
+  <a href="/"
     ><img
       src="assets/images/Drinkly-2.png"
       alt="logo_drinkly"
