--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -29,7 +29,7 @@
 .drink_img{
 
     width: 100%;
-    height: 30rem;
+    height: 20rem;
     display: flex;
     justify-content: flex-end;
     margin-bottom: 1rem;
@@ -52,6 +52,33 @@
 
 #check:checked ~ .move{
     margin-left: 16rem;
+}
+
+.extra_card {
+
+    height: 29rem;
+    display: grid;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+    padding-right: 2.5rem;
+    // padding-left: 2.5rem;
+    gap: 1rem;
+/* Medium (md) */
+@media (min-width: 768px) { 
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+    // width: 90%;
+    gap: 2.5rem;
+ }
+/* Large (lg) */
+@media (min-width: 1024px) { 
+    
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+    // width: 75%;
+    gap: 2.5rem;
+ }
+
+
+
+
 }
 
 .bar_card {
