--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -16,7 +16,7 @@
                         <rect width="746" height="4" rx="2" />
                     </svg>
                 </div>
-                <div class="px-64 py-4 text-4xl font-semibold">PREPARALO TU MISMO</div>
+                <div class="px-8 sm:px-64 md:px-64 py-4 text-4xl font-semibold">PREPARALO TU MISMO</div>
                 <!-- DRINK CARDS -->
                 <div class="w-full flex flex-col items-center mb-20 mt-10">
                   <div class="drink_card">
@@ -76,7 +76,7 @@
                   <rect width="746" height="4" rx="2" />
                 </svg>
               </div>
-              <div class="px-64 py-4 text-4xl font-semibold">DISFRUTA POR MENOS</div>
+              <div class="px-8 sm:px-64 md:px-64 py-4 text-4xl font-semibold">DISFRUTA POR MENOS</div>
               <!-- ADS CARDS -->
               <div class="w-full flex flex-col items-center mb-20 mt-10">
                 <div class="ad_card">
@@ -110,7 +110,7 @@
                         <rect width="746" height="4" rx="2" />
                     </svg>
                 </div>
-                <div class="px-64 py-4 text-4xl font-semibold">DISFRUTA DE CARACAS</div>
+                <div class="px-8 sm:px-64 md:px-64 py-4 text-4xl font-semibold">DISFRUTA DE CARACAS</div>
                 <!-- BAR CARDS -->
                 <div class="w-full flex flex-col items-center mb-20 mt-10">
 
