--- a/src/app/components/bars/detail-bar/detail-bar.component.html
+++ b/src/app/components/bars/detail-bar/detail-bar.component.html
@@ -7,6 +7,10 @@ style="margin-left: 0;"
 
   <app-header></app-header>
  
+  <div *ngIf="loading">
+    <app-loader></app-loader>
+  </div>
+
   <div
   *ngIf = "!loading"
   style="max-width: 90%; font-family: 'Open Sans', sans-serif;"
