--- a/src/app/components/profile-page/profile/profile.component.html
+++ b/src/app/components/profile-page/profile/profile.component.html
@@ -68,10 +68,10 @@
                     </div>
                   </div>
                 </div>
-                <div style="font-family: 'Open Sans', sans-serif; width: 30%; font-size: medium;" *ngIf="(drinksA | filter: filterPost)?.length==0"
+                <!-- <div style="font-family: 'Open Sans', sans-serif; width: 30%; font-size: medium;" *ngIf="(drinksA | filter: filterPost)?.length==0"
                 class="m-auto"
                 >
-                </div>
+                </div> -->
               </div>
 <app-footer></app-footer>
 </div>
